--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>丸龜製麵</title>
     <link rel="stylesheet" href="./style.css">
+     <!-- 縮圖 -->
+     <link rel="shortcut icon" href="img/工作區域 1.png">
 </head>
 
 <body>
@@ -17,55 +19,84 @@
             <span>丸龜製麵</span>
         </div>
         <div id="nav">
-            <a href="">關於丸龜</a>
-            <a href="">最新消息</a>
-            <a href="">聯絡我們</a>
+            <a href="#about">關於丸龜</a>
+            <a href="#news">最新消息</a>
+            <a href="#contact">聯絡我們</a>
         </div>
     </nav>
 
-    <div id='banner'></div>
+    <div id="banner">
+        <div>
+            <h4>夏季新品</h4>
+            <h1>烏龍冷面</h1>
+        </div>
+    </div>
 
-    <section>
-        <h1>關於丸龜</h1>
-        <p>丸亀製麵的起源：
-            創辦人-粟田貴也
-            粟田貴也先生的父親出身自日本香川縣丸亀市，而香川縣以讚岐烏龍麵聞名，讚岐烏龍麵的特色是用手打法製成粗麵條，特別有咬勁，擁有爽口彈牙美味。 粟田貴也以父親的
-            口味作為出發點，打造出丸亀製麵，成為全球最大的日本烏龍麵連鎖店。
+    <section id="about">
+        <h1 class="ngaan">關於丸龜</h1>
+        <hr>
+        <div>
+            <div class="img"></div>
+            <p>丸亀製麵的起源：
+                創辦人-粟田貴也
+                粟田貴也先生的父親出身自日本香川縣丸亀市，而香川縣以讚岐烏龍麵聞名，讚岐烏龍麵的特色是用手打法製成粗麵條，特別有咬勁，擁有爽口彈牙美味。 粟田貴也以父親的
+                口味作為出發點，打造出丸亀製麵，成為全球最大的日本烏龍麵連鎖店。
 
-            丸亀製麵於2013年正式登陸台灣， 不論日本當地、以至
-            全球，丸亀製麵都佔據領先地位。
-            堅持以現點現做的做法及讚岐式點餐， 提供顧客最新鮮、
-            最道地的烏龍麵。
-            經營理念：
-            「創造深受更多顧客長期喜愛的餐廳」這就是我們唯一理念，今後也不會改變。
-            すべては、お客様のよろこびのために。
-            Simply For Your Pleasure.
-        </p>
+                丸亀製麵於2013年正式登陸台灣， 不論日本當地、以至
+                全球，丸亀製麵都佔據領先地位。
+                堅持以現點現做的做法及讚岐式點餐， 提供顧客最新鮮、
+                最道地的烏龍麵。
+                經營理念：
+                「創造深受更多顧客長期喜愛的餐廳」這就是我們唯一理念，今後也不會改變。
+                すべては、お客様のよろこびのために。
+                Simply For Your Pleasure.
+            </p>
+        </div>
     </section>
 
-    <section>
+    <section id="news">
         <h1>最新消息</h1>
+        <hr>
         <ul>
+            <span>2020.05.10</span>
             <li>【四月滿意調查表抽獎公佈】</li>
+            <span>2020.05.9</span>
             <li>【2020 母親節套餐 5/5 開始於全門市販售】</li>
+            <span>2020.05.8</span>
             <li>【三月滿意調查表抽獎公佈】</li>
+            <span>2020.05.1</span>
             <li>【新門市開幕】中壢大潤發門市 4/21 (二) 新開幕</li>
+            <span>2020.04.10</span>
             <li>【開幕活動】歡慶新光三越台北站前門市 4/15 重新開幕</li>
         </ul>
+        <div>
+            <a href="#">查看更多</a>
+        </div>
     </section>
 
-    <section>
+    <section id="contact">
         <h1>聯絡我們</h1>
+        <hr>
         <p>
             如果您在本公司用餐上有任何寶貴的意見和建議，或是有任何資訊想了解，
-            歡迎您利用本網站─『聯絡我們』留言反映，或以電郵方式與我們聯絡。
-            我們必將虛心接受並檢討改進，衷心期盼您再度光臨與指教，謝謝。
+            <br>歡迎您利用本網站─『聯絡我們』留言反映，或以電郵方式與我們聯絡。
+            <br>我們必將虛心接受並檢討改進，衷心期盼您再度光臨與指教，謝謝。
 
-            台灣東利多 丸亀製麵 敬上
-            電郵：service@toridoll.com.tw
-            客服專線：0800-000-063
+            <br>台灣東利多 丸亀製麵 敬上
+            <br>電郵：service@toridoll.com.tw
+            <br>客服專線：0800-000-063
         </p>
+        <form>
+            <div>
+                <input type="text" placeholder="請輸入您的姓名">
+                <input type="email" placeholder="請輸入您的信箱">
+                <textarea></textarea>
+            </div>
+            <input type="submit" value="送出">
+        </form>
     </section>
+    <!-- 頁尾 -->
+    <footer>&copy;2018-2020丸龜製麵 ALL right reserved.</footer>
 
 
 </body>
